--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,14 +16,15 @@
             android:glEsVersion="0x00020000"
             android:required="true"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
-        <activity android:name=".loginActivity"
+        <activity android:name=".LoginActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".racerViewActivity"/>
+        <activity android:name=".RacerViewActivity"/>
+        <activity android:name=".RaceListsActivity"/>
         <meta-data android:name="com.google.android.gms.version"
                    android:value="@integer/google_play_services_version" />
         <meta-data
