--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,8 @@
             android:required="true"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
         <activity android:name=".LoginActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -25,6 +26,8 @@
         </activity>
         <activity android:name=".RacerViewActivity"/>
         <activity android:name=".RaceListsActivity"/>
+        <activity android:name=".CreateRace"/>
+        <activity android:name=".CheckpointChooser"/>
         <meta-data android:name="com.google.android.gms.version"
                    android:value="@integer/google_play_services_version" />
         <meta-data
