--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".RaceListsActivity"/>
         <activity android:name=".CreateRace"/>
         <activity android:name=".CheckpointChooser"/>
+        <activity android:name=".JoinRaceActivity"/>
         <meta-data android:name="com.google.android.gms.version"
                    android:value="@integer/google_play_services_version" />
         <meta-data
