--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,8 +17,7 @@
             android:required="true"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
         <activity android:name=".LoginActivity"
-                  android:label="@string/app_name"
-                  android:noHistory="true">
+                  android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -29,6 +28,7 @@
         <activity android:name=".CreateRace"/>
         <activity android:name=".CheckpointChooser"/>
         <activity android:name=".JoinRaceActivity" android:noHistory="true"/>
+        <activity android:name=".SignupActivity" android:noHistory="true"/>
         <meta-data android:name="com.google.android.gms.version"
                    android:value="@integer/google_play_services_version" />
         <meta-data
